@@ -4228,10 +4228,20 @@ int msSaveMap(mapObj *map, char *filename)
 static int loadMapInternal(mapObj *map)
 {
   int i,j,k;
+  int foundMapToken=MS_FALSE; 
+  int token;
 
   for(;;) {
 
-    switch(msyylex()) {   
+    token = msyylex(); 
+
+    if(!foundMapToken && token != MAP) { 
+      msSetError(MS_IDENTERR, "First token must be MAP, this doesn't look like a mapfile.", "msLoadMap()"); 
+      return(MS_FAILURE); 
+    }
+
+    switch(token) {
+
 
     case(CONFIG):
     {
@@ -4358,6 +4368,7 @@ static int loadMapInternal(mapObj *map)
       if(loadLegend(&(map->legend), map) == -1) return MS_FAILURE;
       break;
     case(MAP):
+      foundMapToken = MS_TRUE; 
       break;   
     case(MAXSIZE):
       if(getInteger(&(map->maxsize)) == -1) return MS_FAILURE;
