@@ -1,22 +1,22 @@
-
-SYMBOL
+SYMBOLSET
+  SYMBOL
     NAME 'circle' 
     TYPE ellipse 
     FILLED true 
     POINTS
       1 1 
     END 
-END
+  END
 
-SYMBOL
+  SYMBOL
     NAME 'xmarks-png'
     TYPE PIXMAP
     IMAGE 'xmarks.png'
-END
+  END
 
-SYMBOL
+  SYMBOL
     NAME 'home-png'
     TYPE PIXMAP
     IMAGE 'home.png'
+  END
 END
-
